fix webkit scrollbar

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -20,3 +20,17 @@ body {
   /* fix in src/components/project/charts/scatters.tsx, full screen modal component does not have 100% height*/
   height: 100%;
 }
+
+
+::-webkit-scrollbar {
+  width: 10px;
+  /*height: 5px;*/
+  }
+  ::-webkit-scrollbar-thumb {
+  background-color: var(--semi-color-bg-4);
+  /*background-image: -webkit-linear-gradient(45deg, rgba(255, 93, 143, 1) 25%, transparent 25%, transparent 50%, rgba(255, 93, 143, 1) 50%, rgba(255, 93, 143, 1) 75%, transparent 75%, transparent);*/
+  }
+  ::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 3px var(--semi-color-nav-bg);
+  background: var(--semi-color-bg-2);
+  }
